[gd_scene load_steps=2 format=3 uid="uid://c2je5g7dc0651"]

[ext_resource type="Script" uid="uid://6sca5f2yu6rs" path="res://scenes/base_shop/base_shop.gd" id="1_gk2i0"]

[node name="Baseshop" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_gk2i0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="InvLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="GoRaidBtn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="AddFakeLootBtn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
